--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Flappy Bird game created with React" />
-    <title>Flappy Bird React</title>
+    <meta name="description" content="Brainrot Bird game created with React" />
+    <title>Brainrot Bird React</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
